<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ashu.explorer.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_explorer"
        android:name="com.ashu.explorer.ui.dashboard.DashboardFragment"
        android:label="@string/explorer"
        tools:layout="@layout/fragment_explorer" />

    <fragment
        android:id="@+id/navigation_net_of_nets"
        android:name="com.ashu.explorer.ui.dashboard.DashboardFragment"
        android:label="@string/net_of_nets"
        tools:layout="@layout/fragment_net_of_nets" />

    <fragment
        android:id="@+id/navigation_activity"
        android:name="com.ashu.explorer.ui.notifications.NotificationsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_post_a_job"
        android:name="com.ashu.explorer.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>